--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
 		"next": "^12.0.5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
 		"sass": "^1.44.0"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.0",
+		"postcss": "^8.4.4",
+		"tailwindcss": "^3.0.0"
 	}
 }
