--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"next": "^12.0.5",
+		"next-strict-csp": "^1.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
-		"sass": "^1.44.0"
+		"sass": "^1.44.0",
+		"sharp": "^0.29.3"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.0",
