--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "spice",
+	"name": "freedom-cleaning",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -23,8 +23,7 @@
 		"sharp": "^0.29.3"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.0",
-		"postcss": "^8.4.4",
-		"tailwindcss": "^3.0.0"
+		"eslint": "8.4.1",
+		"eslint-config-next": "12.0.7"
 	}
 }
