--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
 		"sass": "^1.44.0",
-		"sharp": "^0.29.3"
+		"sharp": "^0.29.3",
+		"sitemap": "^7.0.0",
+		"swiper": "^7.3.2"
 	},
 	"devDependencies": {
 		"eslint": "8.4.1",
