--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
 		"react-icons": "^4.3.1",
 		"sass": "^1.44.0",
 		"sharp": "^0.29.3",
-		"sitemap": "^7.0.0",
 		"swiper": "^7.3.2"
 	},
 	"devDependencies": {
 		"eslint": "8.4.1",
-		"eslint-config-next": "12.0.7"
+		"eslint-config-next": "12.0.7",
+		"next-sitemap": "^1.6.203"
 	}
 }
