--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "freedom-cleaning",
 	"version": "1.0.0",
-	"description": "",
+	"description": "A Cleaning company website",
+	"license": "MIT",
+	"private": true,
 	"main": "index.js",
 	"scripts": {
 		"dev": "next dev",
@@ -13,20 +15,28 @@
 	},
 	"keywords": [],
 	"author": "Freedom Cleaning",
-	"license": "UNLICENSED",
 	"dependencies": {
+		"global": "^4.4.0",
 		"next": "^12.0.5",
 		"next-strict-csp": "^1.0.1",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-import": "^14.0.2",
+		"postcss-preset-env": "^7.0.2",
+		"precss": "^4.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
+		"reactstrap": "^9.0.1",
 		"sass": "^1.44.0",
 		"sharp": "^0.29.3",
 		"swiper": "^7.3.2"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.0",
 		"eslint": "8.4.1",
 		"eslint-config-next": "12.0.7",
-		"next-sitemap": "^1.6.203"
+		"next-sitemap": "^1.6.203",
+		"postcss": "^8.4.5",
+		"tailwindcss": "^3.0.6"
 	}
 }
